# IIT-Hyderabad

./: README.md  main.py  pyproject.toml
cifar/: __init__.py  client_app.py  server_app.py  task.py
