[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cifar"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "asim"

[tool.flwr.app.components]
serverapp = "cifar.server_app:app"
clientapp = "cifar.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 3
fraction-fit = 1.0           
fraction-eval = 1.0          
min-fit-clients = 2          
min-eval-clients = 2         
min-available-clients = 2     

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
